cleanAndReset returns logger names

--- a/keeper/pom.xml
+++ b/keeper/pom.xml
@@ -43,6 +43,11 @@
     </dependency>
     <!-- test -->
     <dependency>
+      <artifactId>hamcrest</artifactId>
+      <groupId>org.hamcrest</groupId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
       <artifactId>junit-jupiter-engine</artifactId>
       <groupId>org.junit.jupiter</groupId>
       <scope>provided</scope>
