--- a/jdk-platform-logging/pom.xml
+++ b/jdk-platform-logging/pom.xml
@@ -46,6 +46,11 @@
       <groupId>io.github.vitalijr2.logging</groupId>
       <version>1.0.0-SNAPSHOT</version>
     </dependency>
+    <dependency>
+      <artifactId>mockito-core</artifactId>
+      <groupId>org.mockito</groupId>
+      <scope>provided</scope>
+    </dependency>
     <!-- test -->
     <dependency>
       <artifactId>hamcrest</artifactId>
