--- a/.github/workflows/codacy.yml
+++ b/.github/workflows/codacy.yml
@@ -70,5 +70,5 @@ jobs:
       - name: Run codacy-coverage-reporter
         uses: codacy/codacy-coverage-reporter-action@a38818475bb21847788496e9f0fddaa4e84955ba
         with:
-          coverage-reports: target/site/jacoco/jacoco.xml
+          coverage-reports: jdk-platform-logging/target/site/jacoco/jacoco.xml,junit-extension/target/site/jacoco/jacoco.xml,keeper/target/site/jacoco/jacoco.xml
           project-token: ${{ secrets.CODACY_PROJECT_TOKEN }}
