--- a/jdk-platform-logging/pom.xml
+++ b/jdk-platform-logging/pom.xml
@@ -17,7 +17,7 @@
 <project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xmlns="http://maven.apache.org/POM/4.0.0"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <artifactId>mock-loggers-junit-extension</artifactId>
+  <artifactId>mock-loggers-jdk-platform-logging</artifactId>
   <build>
     <plugins>
       <plugin>
@@ -42,21 +42,21 @@
       <scope>provided</scope>
     </dependency>
     <dependency>
-      <artifactId>junit-jupiter-api</artifactId>
-      <groupId>org.junit.jupiter</groupId>
-      <scope>provided</scope>
-    </dependency>
-    <dependency>
-      <artifactId>junit-platform-commons</artifactId>
-      <groupId>org.junit.platform</groupId>
-      <scope>provided</scope>
-    </dependency>
-    <dependency>
       <artifactId>mock-loggers-keeper</artifactId>
       <groupId>io.github.vitalijr2.logging</groupId>
       <version>1.0.0-SNAPSHOT</version>
     </dependency>
+    <dependency>
+      <artifactId>mockito-core</artifactId>
+      <groupId>org.mockito</groupId>
+      <scope>provided</scope>
+    </dependency>
     <!-- test -->
+    <dependency>
+      <artifactId>hamcrest</artifactId>
+      <groupId>org.hamcrest</groupId>
+      <scope>test</scope>
+    </dependency>
     <dependency>
       <artifactId>junit-jupiter-engine</artifactId>
       <groupId>org.junit.jupiter</groupId>
@@ -73,11 +73,13 @@
       <scope>provided</scope>
     </dependency>
   </dependencies>
+  <description>Mock loggers for JDK Platform Logging backed by Mockito.</description>
+  <name>Mock loggers for JDK Platform Logging</name>
   <modelVersion>4.0.0</modelVersion>
-  <name>jUnit Extension</name>
   <parent>
     <artifactId>mock-loggers</artifactId>
     <groupId>io.github.vitalijr2.logging</groupId>
+    <relativePath>../pom.xml</relativePath>
     <version>1.0.0-SNAPSHOT</version>
   </parent>
 </project>
