--- a/pom.xml
+++ b/pom.xml
@@ -193,6 +193,11 @@
           <version>3.5.2</version>
         </plugin>
         <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-install-plugin</artifactId>
+          <version>3.1.3</version>
+        </plugin>
+        <plugin>
           <artifactId>maven-invoker-plugin</artifactId>
           <configuration>
             <cloneProjectsTo>${project.build.directory}/it</cloneProjectsTo>
@@ -388,9 +393,8 @@
   </licenses>
   <modelVersion>4.0.0</modelVersion>
   <modules>
+    <module>core</module>
     <module>jdk-platform-logging</module>
-    <module>junit-extension</module>
-    <module>keeper</module>
   </modules>
   <name>Mock Loggers</name>
   <packaging>pom</packaging>
@@ -448,7 +452,15 @@
     </profile>
     <profile>
       <build>
+        <defaultGoal>clean install</defaultGoal>
         <plugins>
+          <plugin>
+            <artifactId>jacoco-maven-plugin</artifactId>
+            <groupId>org.jacoco</groupId>
+            <configuration>
+              <skip>true</skip>
+            </configuration>
+          </plugin>
           <plugin>
             <artifactId>maven-failsafe-plugin</artifactId>
             <configuration>
@@ -457,14 +469,17 @@
             <groupId>org.apache.maven.plugins</groupId>
           </plugin>
           <plugin>
+            <artifactId>maven-install-plugin</artifactId>
+            <groupId>org.apache.maven.plugins</groupId>
+            <configuration>
+              <installAtEnd>false</installAtEnd>
+            </configuration>
+          </plugin>
+          <plugin>
             <artifactId>maven-surefire-plugin</artifactId>
             <configuration>
               <skip>true</skip>
             </configuration>
-            <groupId>org.apache.maven.plugins</groupId>
-          </plugin>
-          <plugin>
-            <artifactId>maven-invoker-plugin</artifactId>
             <groupId>org.apache.maven.plugins</groupId>
           </plugin>
         </plugins>
