Fix READMEs and Codacy workflow

--- a/.github/workflows/codacy.yml
+++ b/.github/workflows/codacy.yml
@@ -30,9 +30,8 @@ jobs:
         with:
           name: targets
           path: |
+            core/target
             jdk-platform-logging/targets
-            junit-extension/target
-            keeper/target
           retention-days: 1
   codacy-security-scan:
     name: Codacy Security Scan
@@ -70,5 +69,5 @@ jobs:
       - name: Run codacy-coverage-reporter
         uses: codacy/codacy-coverage-reporter-action@a38818475bb21847788496e9f0fddaa4e84955ba
         with:
-          coverage-reports: jdk-platform-logging/target/site/jacoco/jacoco.xml,junit-extension/target/site/jacoco/jacoco.xml,keeper/target/site/jacoco/jacoco.xml
+          coverage-reports: core/target/site/jacoco/jacoco.xml,jdk-platform-logging/target/site/jacoco/jacoco.xml
           project-token: ${{ secrets.CODACY_PROJECT_TOKEN }}
