--- a/pom.xml
+++ b/pom.xml
@@ -302,15 +302,6 @@
     <system>GitHub Actions</system>
     <url>https://github.com/vitalijr2/mock-loggers/actions</url>
   </ciManagement>
-  <dependencies>
-    <!-- optional -->
-    <dependency>
-      <artifactId>commons-logging</artifactId>
-      <groupId>commons-logging</groupId>
-      <scope>provided</scope>
-      <version>1.3.4</version>
-    </dependency>
-  </dependencies>
   <dependencyManagement>
     <dependencies>
       <!-- main -->
@@ -393,6 +384,7 @@
   </licenses>
   <modelVersion>4.0.0</modelVersion>
   <modules>
+    <module>commons-logging</module>
     <module>core</module>
     <module>jdk-platform-logging</module>
   </modules>
