Add an integration test to commons logging module

--- a/commons-logging/src/it/hello-commons-logging-world/pom.xml
+++ b/commons-logging/src/it/hello-commons-logging-world/pom.xml
@@ -2,7 +2,7 @@
 <project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xmlns="http://maven.apache.org/POM/4.0.0"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <artifactId>hello-jdk-platform-logging-world</artifactId>
+  <artifactId>hello-commons-logging-world</artifactId>
   <build>
     <plugins>
       <plugin>
@@ -28,12 +28,26 @@
     </plugins>
   </build>
   <dependencies>
+    <!-- main -->
+    <dependency>
+      <artifactId>commons-logging</artifactId>
+      <groupId>commons-logging</groupId>
+      <version>1.3.4</version>
+    </dependency>
     <!-- test -->
+    <!--
     <dependency>
       <artifactId>@project.artifactId@</artifactId>
       <groupId>@project.groupId@</groupId>
       <scope>test</scope>
       <version>@project.version@</version>
+    </dependency>
+    -->
+    <dependency>
+      <groupId>io.github.vitalijr2.logging</groupId>
+      <artifactId>mock-loggers-commons-logging</artifactId>
+      <scope>test</scope>
+      <version>1.0.0-SNAPSHOT</version>
     </dependency>
     <dependency>
       <artifactId>hamcrest</artifactId>
