--- a/commons-logging/pom.xml
+++ b/commons-logging/pom.xml
@@ -17,7 +17,7 @@
 <project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xmlns="http://maven.apache.org/POM/4.0.0"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <artifactId>commons-logging</artifactId>
+  <artifactId>mock-loggers-commons-logging</artifactId>
   <build>
     <plugins>
       <plugin>
