--- a/commons-logging/pom.xml
+++ b/commons-logging/pom.xml
@@ -17,7 +17,7 @@
 <project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xmlns="http://maven.apache.org/POM/4.0.0"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <artifactId>mock-loggers-core</artifactId>
+  <artifactId>mock-loggers-commons-logging</artifactId>
   <build>
     <plugins>
       <plugin>
@@ -41,6 +41,22 @@
       <groupId>org.jetbrains</groupId>
       <scope>provided</scope>
     </dependency>
+    <dependency>
+      <artifactId>commons-logging</artifactId>
+      <groupId>commons-logging</groupId>
+      <scope>provided</scope>
+      <version>1.3.4</version>
+    </dependency>
+    <dependency>
+      <artifactId>mock-loggers-core</artifactId>
+      <groupId>io.github.vitalijr2.logging</groupId>
+      <version>1.0.0-SNAPSHOT</version>
+    </dependency>
+    <dependency>
+      <artifactId>mockito-core</artifactId>
+      <groupId>org.mockito</groupId>
+      <scope>provided</scope>
+    </dependency>
     <!-- test -->
     <dependency>
       <artifactId>hamcrest</artifactId>
@@ -53,20 +69,35 @@
       <scope>provided</scope>
     </dependency>
     <dependency>
+      <artifactId>junit-jupiter-params</artifactId>
+      <groupId>org.junit.jupiter</groupId>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
       <artifactId>mockito-junit-jupiter</artifactId>
       <groupId>org.mockito</groupId>
       <scope>provided</scope>
     </dependency>
   </dependencies>
-  <description>The observer pattern is implemented here: cleaners subscribe to notifications from a keeper, who sends
-    alerts when mock loggers need to be cleaned and reset. Logger factories should implement the cleaner interface and
-    register themselves with the keeper. The jUnit extension manages the keeper and sends alerts before and after tests.
-  </description>
+  <description>Mock loggers for Apache Commons Logging backed by Mockito.</description>
+  <name>Mock loggers for Apache Commons Logging</name>
   <modelVersion>4.0.0</modelVersion>
-  <name>Logger Keeper and jUnit Extension</name>
   <parent>
     <artifactId>mock-loggers</artifactId>
     <groupId>io.github.vitalijr2.logging</groupId>
     <version>1.0.0-SNAPSHOT</version>
   </parent>
+  <profiles>
+    <profile>
+      <build>
+        <plugins>
+          <plugin>
+            <artifactId>maven-invoker-plugin</artifactId>
+            <groupId>org.apache.maven.plugins</groupId>
+          </plugin>
+        </plugins>
+      </build>
+      <id>run-its</id>
+    </profile>
+  </profiles>
 </project>
