Add a SLF4J module

--- a/pom.xml
+++ b/pom.xml
@@ -387,6 +387,7 @@
     <module>commons-logging</module>
     <module>core</module>
     <module>jdk-platform-logging</module>
+    <module>slf4j</module>
   </modules>
   <name>Mock Loggers</name>
   <packaging>pom</packaging>
