--- a/slf4j/pom.xml
+++ b/slf4j/pom.xml
@@ -87,4 +87,17 @@
     <groupId>io.github.vitalijr2.logging</groupId>
     <version>1.0.0-SNAPSHOT</version>
   </parent>
+  <profiles>
+    <profile>
+      <build>
+        <plugins>
+          <plugin>
+            <artifactId>maven-invoker-plugin</artifactId>
+            <groupId>org.apache.maven.plugins</groupId>
+          </plugin>
+        </plugins>
+      </build>
+      <id>run-its</id>
+    </profile>
+  </profiles>
 </project>
