--- a/slf4j/src/it/hello-slf4j-world/pom.xml
+++ b/slf4j/src/it/hello-slf4j-world/pom.xml
@@ -2,7 +2,7 @@
 <project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xmlns="http://maven.apache.org/POM/4.0.0"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <artifactId>hello-commons-logging-world</artifactId>
+  <artifactId>hello-slf4j-world</artifactId>
   <build>
     <plugins>
       <plugin>
