--- a/pom.xml
+++ b/pom.xml
@@ -125,6 +125,28 @@
           <version>0.8.12</version>
         </plugin>
         <plugin>
+          <artifactId>license-maven-plugin</artifactId>
+          <executions>
+            <execution>
+              <configuration>
+                <excludeTransitiveDependencies>true</excludeTransitiveDependencies>
+                <excludedScopes>test</excludedScopes>
+                <!-- @formatter:off -->
+                <licenseMerges>
+                  <licenseMerge>Apache License version 2.0|The Apache Software License, Version 2.0|The Apache License, Version 2.0|Apache License, Version 2.0|Apache-2.0|Apache 2</licenseMerge>
+                  <licenseMerge>Eclipse Public License - v 2.0|Eclipse Public License v2.0</licenseMerge>
+                  <licenseMerge>MIT License|MIT</licenseMerge>
+                </licenseMerges>
+                <!-- @formatter:on -->
+                <outputDirectory>${project.basedir}</outputDirectory>
+              </configuration>
+              <id>default-cli</id>
+            </execution>
+          </executions>
+          <groupId>org.codehaus.mojo</groupId>
+          <version>2.4.0</version>
+        </plugin>
+        <plugin>
           <artifactId>maven-clean-plugin</artifactId>
           <groupId>org.apache.maven.plugins</groupId>
           <version>3.4.0</version>
@@ -403,6 +425,24 @@
             </configuration>
             <extensions>true</extensions>
             <groupId>org.sonatype.central</groupId>
+          </plugin>
+          <plugin>
+            <artifactId>license-maven-plugin</artifactId>
+            <executions>
+              <execution>
+                <configuration>
+                  <inceptionYear>${project.inceptionYear}</inceptionYear>
+                  <licenseName>apache_v2</licenseName>
+                  <organizationName>Vitalij Berdinskih</organizationName>
+                </configuration>
+                <goals>
+                  <goal>check-file-header</goal>
+                </goals>
+                <id>check-license-header</id>
+                <phase>process-sources</phase>
+              </execution>
+            </executions>
+            <groupId>org.codehaus.mojo</groupId>
           </plugin>
           <plugin>
             <artifactId>maven-javadoc-plugin</artifactId>
