Add a mock tinylog provider

--- a/pom.xml
+++ b/pom.xml
@@ -412,6 +412,7 @@
     <module>core</module>
     <module>jdk-platform-logging</module>
     <module>slf4j</module>
+    <module>tinylog-provider</module>
   </modules>
   <name>Mock Loggers</name>
   <packaging>pom</packaging>
