--- a/core/pom.xml
+++ b/core/pom.xml
@@ -35,27 +35,35 @@
     </plugins>
   </build>
   <dependencies>
-    <!-- main -->
     <dependency>
       <artifactId>annotations</artifactId>
       <groupId>org.jetbrains</groupId>
-      <scope>provided</scope>
     </dependency>
-    <!-- test -->
     <dependency>
       <artifactId>hamcrest</artifactId>
       <groupId>org.hamcrest</groupId>
-      <scope>test</scope>
     </dependency>
     <dependency>
-      <artifactId>junit-jupiter-engine</artifactId>
+      <artifactId>junit-jupiter-api</artifactId>
       <groupId>org.junit.jupiter</groupId>
       <scope>provided</scope>
     </dependency>
     <dependency>
+      <artifactId>junit-jupiter-engine</artifactId>
+      <groupId>org.junit.jupiter</groupId>
+    </dependency>
+    <dependency>
+      <artifactId>junit-platform-commons</artifactId>
+      <groupId>org.junit.platform</groupId>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <artifactId>mockito-core</artifactId>
+      <groupId>org.mockito</groupId>
+    </dependency>
+    <dependency>
       <artifactId>mockito-junit-jupiter</artifactId>
       <groupId>org.mockito</groupId>
-      <scope>provided</scope>
     </dependency>
   </dependencies>
   <description>The observer pattern is implemented here: cleaners subscribe to notifications from a keeper, who sends
@@ -67,6 +75,6 @@
   <parent>
     <artifactId>mock-loggers</artifactId>
     <groupId>io.github.vitalijr2.logging</groupId>
-    <version>1.0.0</version>
+    <version>1.1.0-SNAPSHOT</version>
   </parent>
 </project>
