--- a/pom.xml
+++ b/pom.xml
@@ -328,36 +328,23 @@
   </ciManagement>
   <dependencyManagement>
     <dependencies>
-      <!-- main -->
       <dependency>
         <artifactId>annotations</artifactId>
         <groupId>org.jetbrains</groupId>
         <version>26.0.1</version>
-      </dependency>
-      <dependency>
-        <artifactId>junit-jupiter-api</artifactId>
-        <groupId>org.junit.jupiter</groupId>
         <scope>provided</scope>
-        <version>${junit.version}</version>
       </dependency>
-      <dependency>
-        <artifactId>junit-platform-commons</artifactId>
-        <groupId>org.junit.platform</groupId>
-        <scope>provided</scope>
-        <version>1.11.3</version>
-      </dependency>
-      <dependency>
-        <artifactId>mockito-core</artifactId>
-        <groupId>org.mockito</groupId>
-        <scope>provided</scope>
-        <version>${mockito.version}</version>
-      </dependency>
-      <!-- test -->
       <dependency>
         <artifactId>hamcrest</artifactId>
         <groupId>org.hamcrest</groupId>
         <scope>test</scope>
         <version>3.0</version>
+      </dependency>
+      <dependency>
+        <artifactId>junit-jupiter-api</artifactId>
+        <groupId>org.junit.jupiter</groupId>
+        <scope>test</scope>
+        <version>${junit.version}</version>
       </dependency>
       <dependency>
         <artifactId>junit-jupiter-engine</artifactId>
@@ -370,6 +357,18 @@
         <groupId>org.junit.jupiter</groupId>
         <scope>test</scope>
         <version>${junit.version}</version>
+      </dependency>
+      <dependency>
+        <artifactId>junit-platform-commons</artifactId>
+        <groupId>org.junit.platform</groupId>
+        <scope>test</scope>
+        <version>1.11.3</version>
+      </dependency>
+      <dependency>
+        <artifactId>mockito-core</artifactId>
+        <groupId>org.mockito</groupId>
+        <scope>test</scope>
+        <version>${mockito.version}</version>
       </dependency>
       <dependency>
         <artifactId>mockito-junit-jupiter</artifactId>
@@ -536,5 +535,5 @@
     <url>https://github.com/vitalijr2/mock-loggers</url>
   </scm>
   <url>https://github.com/vitalijr2/mock-loggers</url>
-  <version>1.0.0</version>
+  <version>1.1.0-SNAPSHOT</version>
 </project>
