--- a/tinylog-provider/pom.xml
+++ b/tinylog-provider/pom.xml
@@ -35,16 +35,22 @@
     </plugins>
   </build>
   <dependencies>
-    <!-- main -->
     <dependency>
       <artifactId>annotations</artifactId>
       <groupId>org.jetbrains</groupId>
-      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <artifactId>junit-jupiter-engine</artifactId>
+      <groupId>org.junit.jupiter</groupId>
+    </dependency>
+    <dependency>
+      <artifactId>junit-jupiter-params</artifactId>
+      <groupId>org.junit.jupiter</groupId>
     </dependency>
     <dependency>
       <artifactId>mock-loggers-core</artifactId>
       <groupId>io.github.vitalijr2.logging</groupId>
-      <version>1.0.0</version>
+      <version>1.1.0-SNAPSHOT</version>
     </dependency>
     <dependency>
       <artifactId>mockito-core</artifactId>
@@ -52,26 +58,14 @@
       <scope>provided</scope>
     </dependency>
     <dependency>
+      <artifactId>mockito-junit-jupiter</artifactId>
+      <groupId>org.mockito</groupId>
+    </dependency>
+    <dependency>
       <artifactId>tinylog-api</artifactId>
       <groupId>org.tinylog</groupId>
       <scope>provided</scope>
       <version>2.7.0</version>
-    </dependency>
-    <!-- test -->
-    <dependency>
-      <artifactId>junit-jupiter-engine</artifactId>
-      <groupId>org.junit.jupiter</groupId>
-      <scope>provided</scope>
-    </dependency>
-    <dependency>
-      <artifactId>junit-jupiter-params</artifactId>
-      <groupId>org.junit.jupiter</groupId>
-      <scope>provided</scope>
-    </dependency>
-    <dependency>
-      <artifactId>mockito-junit-jupiter</artifactId>
-      <groupId>org.mockito</groupId>
-      <scope>provided</scope>
     </dependency>
   </dependencies>
   <description>Mock loggers for tinylog backed by Mockito.</description>
@@ -80,7 +74,7 @@
   <parent>
     <artifactId>mock-loggers</artifactId>
     <groupId>io.github.vitalijr2.logging</groupId>
-    <version>1.0.0</version>
+    <version>1.1.0-SNAPSHOT</version>
   </parent>
   <profiles>
     <profile>
