Fix configuration for license-maven-plugin

--- a/.github/workflows/check-release.yml
+++ b/.github/workflows/check-release.yml
@@ -23,4 +23,6 @@ jobs:
         env:
           SIGN_KEY: ${{ secrets.SIGN_KEY }}
           SIGN_KEY_PASS: ${{ secrets.SIGN_KEY_PASS }}
-        run: ./mvnw --batch-mode -s .mvn/ci_settings.xml -ntp -DskipTests -DskipPublishing -Prun-its,release
+        run: |
+          ./mvnw --batch-mode -s .mvn/ci_settings.xml -ntp -DskipTests -DskipPublishing -Prun-its,release
+          ./mvnw license:check-file-header -Dlicense.failOnMissingHeader=true -Pprepare-and-check
