--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
-	Copyright 2024 Vitalij Berdinskih
+	Copyright (C) 2024 Vitalij Berdinskih
 
 	Licensed under the Apache License, Version 2.0 (the "License");
 	you may not use this file except in compliance with the License.
@@ -123,28 +123,6 @@
           </executions>
           <groupId>org.jacoco</groupId>
           <version>0.8.12</version>
-        </plugin>
-        <plugin>
-          <artifactId>license-maven-plugin</artifactId>
-          <executions>
-            <execution>
-              <configuration>
-                <excludeTransitiveDependencies>true</excludeTransitiveDependencies>
-                <excludedScopes>test</excludedScopes>
-                <!-- @formatter:off -->
-                <licenseMerges>
-                  <licenseMerge>Apache License version 2.0|The Apache Software License, Version 2.0|The Apache License, Version 2.0|Apache License, Version 2.0|Apache-2.0|Apache 2</licenseMerge>
-                  <licenseMerge>Eclipse Public License - v 2.0|Eclipse Public License v2.0</licenseMerge>
-                  <licenseMerge>MIT License|MIT</licenseMerge>
-                </licenseMerges>
-                <!-- @formatter:on -->
-                <outputDirectory>${project.basedir}</outputDirectory>
-              </configuration>
-              <id>default-cli</id>
-            </execution>
-          </executions>
-          <groupId>org.codehaus.mojo</groupId>
-          <version>2.4.0</version>
         </plugin>
         <plugin>
           <artifactId>maven-clean-plugin</artifactId>
@@ -418,6 +396,50 @@
   <profiles>
     <profile>
       <build>
+        <plugins>
+          <plugin>
+            <artifactId>license-maven-plugin</artifactId>
+            <executions>
+              <execution>
+                <configuration>
+                  <addJavaLicenseAfterPackage>false</addJavaLicenseAfterPackage>
+                  <excludedScopes>test</excludedScopes>
+                  <excludes>
+                    <exclude>**/package-info.java</exclude>
+                  </excludes>
+                  <excludeTransitiveDependencies>true</excludeTransitiveDependencies>
+                  <inceptionYear>${project.inceptionYear}</inceptionYear>
+                  <!-- @formatter:off -->
+                  <licenseMerges>
+                    <licenseMerge>Apache License version 2.0|The Apache Software License, Version 2.0|The Apache License, Version 2.0|Apache License, Version 2.0|Apache-2.0|Apache 2</licenseMerge>
+                    <licenseMerge>Eclipse Public License - v 2.0|Eclipse Public License v2.0</licenseMerge>
+                    <licenseMerge>MIT License|MIT</licenseMerge>
+                  </licenseMerges>
+                  <licenseName>apache_v2</licenseName>
+                  <!-- @formatter:on -->
+                  <organizationName>Vitalij Berdinskih</organizationName>
+                  <outputDirectory>${project.basedir}</outputDirectory>
+                  <processEndTag>---------------LICENSE_END-------------------</processEndTag>
+                  <processStartTag>---------------LICENSE_START-----------------</processStartTag>
+                  <projectName>Mock Loggers</projectName>
+                  <roots>
+                    <root>src/main/java</root>
+                  </roots>
+                  <sectionDelimiter>---------------------------------------------</sectionDelimiter>
+                  <trimHeaderLine>true</trimHeaderLine>
+                </configuration>
+                <id>default-cli</id>
+              </execution>
+            </executions>
+            <groupId>org.codehaus.mojo</groupId>
+            <version>2.4.0</version>
+          </plugin>
+        </plugins>
+      </build>
+      <id>prepare-and-check</id>
+    </profile>
+    <profile>
+      <build>
         <defaultGoal>clean deploy</defaultGoal>
         <plugins>
           <plugin>
@@ -427,24 +449,6 @@
             </configuration>
             <extensions>true</extensions>
             <groupId>org.sonatype.central</groupId>
-          </plugin>
-          <plugin>
-            <artifactId>license-maven-plugin</artifactId>
-            <executions>
-              <execution>
-                <configuration>
-                  <inceptionYear>${project.inceptionYear}</inceptionYear>
-                  <licenseName>apache_v2</licenseName>
-                  <organizationName>Vitalij Berdinskih</organizationName>
-                </configuration>
-                <goals>
-                  <goal>check-file-header</goal>
-                </goals>
-                <id>check-license-header</id>
-                <phase>process-sources</phase>
-              </execution>
-            </executions>
-            <groupId>org.codehaus.mojo</groupId>
           </plugin>
           <plugin>
             <artifactId>maven-javadoc-plugin</artifactId>
