--- a/commons-logging/pom.xml
+++ b/commons-logging/pom.xml
@@ -28,7 +28,7 @@
       <artifactId>commons-logging</artifactId>
       <groupId>commons-logging</groupId>
       <scope>provided</scope>
-      <version>1.3.4</version>
+      <version>${commons-logging.version}</version>
     </dependency>
     <dependency>
       <artifactId>hamcrest</artifactId>
@@ -70,6 +70,22 @@
       <build>
         <plugins>
           <plugin>
+            <artifactId>maven-javadoc-plugin</artifactId>
+            <configuration>
+              <links>
+                <link>https://javadoc.io/doc/commons-logging/commons-logging/${commons-logging.version}</link>
+              </links>
+            </configuration>
+            <groupId>org.apache.maven.plugins</groupId>
+          </plugin>
+        </plugins>
+      </build>
+      <id>release</id>
+    </profile>
+    <profile>
+      <build>
+        <plugins>
+          <plugin>
             <artifactId>maven-invoker-plugin</artifactId>
             <groupId>org.apache.maven.plugins</groupId>
           </plugin>
@@ -78,4 +94,7 @@
       <id>run-its</id>
     </profile>
   </profiles>
+  <properties>
+    <commons-logging.version>1.3.4</commons-logging.version>
+  </properties>
 </project>
