--- a/pom.xml
+++ b/pom.xml
@@ -1,19 +1,4 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!--
-	Copyright 2024 Vitalij Berdinskih
-
-	Licensed under the Apache License, Version 2.0 (the "License");
-	you may not use this file except in compliance with the License.
-	You may obtain a copy of the License at
-
-	    http://www.apache.org/licenses/LICENSE-2.0
-
-	Unless required by applicable law or agreed to in writing, software
-	distributed under the License is distributed on an "AS IS" BASIS,
-	WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-	See the License for the specific language governing permissions and
-	limitations under the License.
--->
 <project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xmlns="http://maven.apache.org/POM/4.0.0"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
@@ -123,28 +108,6 @@
           </executions>
           <groupId>org.jacoco</groupId>
           <version>0.8.12</version>
-        </plugin>
-        <plugin>
-          <artifactId>license-maven-plugin</artifactId>
-          <executions>
-            <execution>
-              <configuration>
-                <excludeTransitiveDependencies>true</excludeTransitiveDependencies>
-                <excludedScopes>test</excludedScopes>
-                <!-- @formatter:off -->
-                <licenseMerges>
-                  <licenseMerge>Apache License version 2.0|The Apache Software License, Version 2.0|The Apache License, Version 2.0|Apache License, Version 2.0|Apache-2.0|Apache 2</licenseMerge>
-                  <licenseMerge>Eclipse Public License - v 2.0|Eclipse Public License v2.0</licenseMerge>
-                  <licenseMerge>MIT License|MIT</licenseMerge>
-                </licenseMerges>
-                <!-- @formatter:on -->
-                <outputDirectory>${project.basedir}</outputDirectory>
-              </configuration>
-              <id>default-cli</id>
-            </execution>
-          </executions>
-          <groupId>org.codehaus.mojo</groupId>
-          <version>2.4.0</version>
         </plugin>
         <plugin>
           <artifactId>maven-clean-plugin</artifactId>
@@ -328,36 +291,23 @@
   </ciManagement>
   <dependencyManagement>
     <dependencies>
-      <!-- main -->
       <dependency>
         <artifactId>annotations</artifactId>
         <groupId>org.jetbrains</groupId>
+        <scope>provided</scope>
         <version>26.0.1</version>
       </dependency>
-      <dependency>
-        <artifactId>junit-jupiter-api</artifactId>
-        <groupId>org.junit.jupiter</groupId>
-        <scope>provided</scope>
-        <version>${junit.version}</version>
-      </dependency>
-      <dependency>
-        <artifactId>junit-platform-commons</artifactId>
-        <groupId>org.junit.platform</groupId>
-        <scope>provided</scope>
-        <version>1.11.3</version>
-      </dependency>
-      <dependency>
-        <artifactId>mockito-core</artifactId>
-        <groupId>org.mockito</groupId>
-        <scope>provided</scope>
-        <version>${mockito.version}</version>
-      </dependency>
-      <!-- test -->
       <dependency>
         <artifactId>hamcrest</artifactId>
         <groupId>org.hamcrest</groupId>
         <scope>test</scope>
         <version>3.0</version>
+      </dependency>
+      <dependency>
+        <artifactId>junit-jupiter-api</artifactId>
+        <groupId>org.junit.jupiter</groupId>
+        <scope>test</scope>
+        <version>${junit.version}</version>
       </dependency>
       <dependency>
         <artifactId>junit-jupiter-engine</artifactId>
@@ -370,6 +320,18 @@
         <groupId>org.junit.jupiter</groupId>
         <scope>test</scope>
         <version>${junit.version}</version>
+      </dependency>
+      <dependency>
+        <artifactId>junit-platform-commons</artifactId>
+        <groupId>org.junit.platform</groupId>
+        <scope>test</scope>
+        <version>1.11.3</version>
+      </dependency>
+      <dependency>
+        <artifactId>mockito-core</artifactId>
+        <groupId>org.mockito</groupId>
+        <scope>test</scope>
+        <version>${mockito.version}</version>
       </dependency>
       <dependency>
         <artifactId>mockito-junit-jupiter</artifactId>
@@ -412,10 +374,55 @@
     <module>core</module>
     <module>jdk-platform-logging</module>
     <module>slf4j</module>
+    <module>tinylog-provider</module>
   </modules>
   <name>Mock Loggers</name>
   <packaging>pom</packaging>
   <profiles>
+    <profile>
+      <build>
+        <plugins>
+          <plugin>
+            <artifactId>license-maven-plugin</artifactId>
+            <executions>
+              <execution>
+                <configuration>
+                  <addJavaLicenseAfterPackage>false</addJavaLicenseAfterPackage>
+                  <excludeTransitiveDependencies>true</excludeTransitiveDependencies>
+                  <excludedScopes>test</excludedScopes>
+                  <excludes>
+                    <exclude>**/package-info.java</exclude>
+                  </excludes>
+                  <inceptionYear>${project.inceptionYear}</inceptionYear>
+                  <!-- @formatter:off -->
+                  <licenseMerges>
+                    <licenseMerge>Apache License version 2.0|The Apache Software License, Version 2.0|The Apache License, Version 2.0|Apache License, Version 2.0|Apache-2.0|Apache 2</licenseMerge>
+                    <licenseMerge>Eclipse Public License - v 2.0|Eclipse Public License v2.0</licenseMerge>
+                    <licenseMerge>MIT License|MIT</licenseMerge>
+                  </licenseMerges>
+                  <licenseName>apache_v2</licenseName>
+                  <!-- @formatter:on -->
+                  <organizationName>Vitalij Berdinskih</organizationName>
+                  <outputDirectory>${project.basedir}</outputDirectory>
+                  <processEndTag>---------------LICENSE_END-------------------</processEndTag>
+                  <processStartTag>---------------LICENSE_START-----------------</processStartTag>
+                  <projectName>Mock Loggers</projectName>
+                  <roots>
+                    <root>src/main/java</root>
+                  </roots>
+                  <sectionDelimiter>---------------------------------------------</sectionDelimiter>
+                  <trimHeaderLine>true</trimHeaderLine>
+                </configuration>
+                <id>default-cli</id>
+              </execution>
+            </executions>
+            <groupId>org.codehaus.mojo</groupId>
+            <version>2.4.0</version>
+          </plugin>
+        </plugins>
+      </build>
+      <id>prepare-and-check</id>
+    </profile>
     <profile>
       <build>
         <defaultGoal>clean deploy</defaultGoal>
@@ -427,24 +434,6 @@
             </configuration>
             <extensions>true</extensions>
             <groupId>org.sonatype.central</groupId>
-          </plugin>
-          <plugin>
-            <artifactId>license-maven-plugin</artifactId>
-            <executions>
-              <execution>
-                <configuration>
-                  <inceptionYear>${project.inceptionYear}</inceptionYear>
-                  <licenseName>apache_v2</licenseName>
-                  <organizationName>Vitalij Berdinskih</organizationName>
-                </configuration>
-                <goals>
-                  <goal>check-file-header</goal>
-                </goals>
-                <id>check-license-header</id>
-                <phase>process-sources</phase>
-              </execution>
-            </executions>
-            <groupId>org.codehaus.mojo</groupId>
           </plugin>
           <plugin>
             <artifactId>maven-javadoc-plugin</artifactId>
@@ -535,5 +524,5 @@
     <url>https://github.com/vitalijr2/mock-loggers</url>
   </scm>
   <url>https://github.com/vitalijr2/mock-loggers</url>
-  <version>1.0.0</version>
+  <version>1.1.0-SNAPSHOT</version>
 </project>
