--- a/pom.xml
+++ b/pom.xml
@@ -394,6 +394,7 @@
                   <excludes>
                     <exclude>**/package-info.java</exclude>
                   </excludes>
+                  <excludedGroups>io\.github\.vitalijr2\.logging</excludedGroups>
                   <inceptionYear>${project.inceptionYear}</inceptionYear>
                   <!-- @formatter:off -->
                   <licenseMerges>
