--- a/pom.xml
+++ b/pom.xml
@@ -375,6 +375,7 @@
     <module>jdk-platform-logging</module>
     <module>slf4j</module>
     <module>tinylog-provider</module>
+    <module>tinylog-writer</module>
   </modules>
   <name>Mock Loggers</name>
   <packaging>pom</packaging>
@@ -393,6 +394,7 @@
                   <excludes>
                     <exclude>**/package-info.java</exclude>
                   </excludes>
+                  <excludedGroups>io\.github\.vitalijr2\.logging</excludedGroups>
                   <inceptionYear>${project.inceptionYear}</inceptionYear>
                   <!-- @formatter:off -->
                   <licenseMerges>
