--- a/tinylog-provider/pom.xml
+++ b/tinylog-provider/pom.xml
@@ -67,9 +67,9 @@
       <version>${tinylog.version}</version>
     </dependency>
   </dependencies>
-  <description>Mock loggers for tinylog backed by Mockito.</description>
+  <description>Mock provider for tinylog backed by Mockito.</description>
   <modelVersion>4.0.0</modelVersion>
-  <name>Mock loggers for tinylog</name>
+  <name>Mock provider for tinylog</name>
   <parent>
     <artifactId>mock-loggers</artifactId>
     <groupId>io.github.vitalijr2.logging</groupId>
