--- a/.github/workflows/codacy.yml
+++ b/.github/workflows/codacy.yml
@@ -30,8 +30,11 @@ jobs:
         with:
           name: targets
           path: |
+            commons-logging/target
             core/target
-            jdk-platform-logging/targets
+            jdk-platform-logging/target
+            slf4j/target
+            tinylog-provider/target
           retention-days: 1
   codacy-security-scan:
     name: Codacy Security Scan
@@ -69,5 +72,5 @@ jobs:
       - name: Run codacy-coverage-reporter
         uses: codacy/codacy-coverage-reporter-action@a38818475bb21847788496e9f0fddaa4e84955ba
         with:
-          coverage-reports: core/target/site/jacoco/jacoco.xml,jdk-platform-logging/target/site/jacoco/jacoco.xml
+          coverage-reports: commons-logging/target/site/jacoco/jacoco.xml,core/target/site/jacoco/jacoco.xml,jdk-platform-logging/target/site/jacoco/jacoco.xml,slf4j/target/site/jacoco/jacoco.xml,tinylog-provider/target/site/jacoco/jacoco.xml,tinylog-writer/target/site/jacoco/jacoco.xml
           project-token: ${{ secrets.CODACY_PROJECT_TOKEN }}
