--- a/pom.xml
+++ b/pom.xml
@@ -526,5 +526,5 @@
     <url>https://github.com/vitalijr2/mock-loggers</url>
   </scm>
   <url>https://github.com/vitalijr2/mock-loggers</url>
-  <version>1.1.0</version>
+  <version>1.1.1-SNAPSHOT</version>
 </project>
