Mention of THIRD-PARTY.txt

--- a/pom.xml
+++ b/pom.xml
@@ -362,7 +362,7 @@
   </issueManagement>
   <licenses>
     <license>
-      <comments>See NOTICE for third-party licenses.</comments>
+      <comments>See THIRD-PARTY.txt for third-party licenses.</comments>
       <distribution>repo</distribution>
       <name>Apache 2</name>
       <url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
