--- a/core/pom.xml
+++ b/core/pom.xml
@@ -66,7 +66,7 @@
   <parent>
     <artifactId>mock-loggers</artifactId>
     <groupId>io.github.vitalijr2.logging</groupId>
-    <version>1.1.1-SNAPSHOT</version>
+    <version>1.1.1</version>
   </parent>
   <profiles>
     <profile>
