--- a/pom.xml
+++ b/pom.xml
@@ -537,5 +537,5 @@
     <url>https://github.com/vitalijr2/mock-loggers</url>
   </scm>
   <url>https://github.com/vitalijr2/mock-loggers</url>
-  <version>1.1.1-SNAPSHOT</version>
+  <version>1.1.1</version>
 </project>
