--- a/tinylog-provider/pom.xml
+++ b/tinylog-provider/pom.xml
@@ -14,6 +14,17 @@
         <groupId>org.apache.maven.plugins</groupId>
       </plugin>
       <plugin>
+        <artifactId>maven-jar-plugin</artifactId>
+        <configuration>
+          <archive>
+            <manifestEntries>
+              <Automatic-Module-Name>mock.loggers.tinylog.provider</Automatic-Module-Name>
+            </manifestEntries>
+          </archive>
+        </configuration>
+        <groupId>org.apache.maven.plugins</groupId>
+      </plugin>
+      <plugin>
         <artifactId>jacoco-maven-plugin</artifactId>
         <groupId>org.jacoco</groupId>
       </plugin>
@@ -42,14 +53,9 @@
       <groupId>org.junit.jupiter</groupId>
     </dependency>
     <dependency>
-      <artifactId>junit-platform-commons</artifactId>
-      <groupId>org.junit.platform</groupId>
-      <scope>provided</scope>
-    </dependency>
-    <dependency>
       <artifactId>mock-loggers-core</artifactId>
       <groupId>io.github.vitalijr2.logging</groupId>
-      <version>1.1.1-SNAPSHOT</version>
+      <version>1.1.1</version>
     </dependency>
     <dependency>
       <artifactId>mockito-core</artifactId>
@@ -72,9 +78,23 @@
   <parent>
     <artifactId>mock-loggers</artifactId>
     <groupId>io.github.vitalijr2.logging</groupId>
-    <version>1.1.1-SNAPSHOT</version>
+    <version>1.1.1</version>
   </parent>
   <profiles>
+    <profile>
+      <build>
+        <plugins>
+          <plugin>
+            <artifactId>license-maven-plugin</artifactId>
+            <configuration>
+              <skipCheckLicense>false</skipCheckLicense>
+            </configuration>
+            <groupId>org.codehaus.mojo</groupId>
+          </plugin>
+        </plugins>
+      </build>
+      <id>prepare-and-check</id>
+    </profile>
     <profile>
       <build>
         <plugins>
