--- a/.github/workflows/codacy.yml
+++ b/.github/workflows/codacy.yml
@@ -21,12 +21,12 @@ jobs:
       - name: Setup Java JDK
         uses: actions/setup-java@v4
         with:
-          distribution: 'corretto'
-          java-version: 11
+          distribution: 'zulu'
+          java-version: '11'
       - name: Build with Maven
         run: ./mvnw --batch-mode
       - name: Temporarily save target and test requests
-        uses: actions/upload-artifact@v4.5.0
+        uses: actions/upload-artifact@v4
         with:
           name: targets
           path: |
@@ -65,7 +65,7 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
       - name: Retrieve saved test requests and target
-        uses: actions/download-artifact@v4.1.8
+        uses: actions/download-artifact@v4
         with:
           name: targets
           path: .
