--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -30,8 +30,8 @@ jobs:
     - name: Setup Java JDK
       uses: actions/setup-java@v4
       with:
-        distribution: 'corretto'
-        java-version: 11
+        distribution: 'zulu'
+        java-version: '11'
     - name: Initialize CodeQL
       uses: github/codeql-action/init@v3
       with:
