Add the Bill of Materials module

--- a/pom.xml
+++ b/pom.xml
@@ -369,6 +369,7 @@
   </licenses>
   <modelVersion>4.0.0</modelVersion>
   <modules>
+    <module>bom</module>
     <module>commons-logging</module>
     <module>core</module>
     <module>jdk-platform-logging</module>
