--- a/pom.xml
+++ b/pom.xml
@@ -332,6 +332,10 @@
         <version>${junit.version}</version>
       </dependency>
       <dependency>
+        <groupId>org.junit.platform</groupId>
+        <artifactId>junit-platform-launcher</artifactId>
+      </dependency>
+      <dependency>
         <artifactId>mockito-core</artifactId>
         <groupId>org.mockito</groupId>
         <scope>test</scope>
