--- a/elf4j/pom.xml
+++ b/elf4j/pom.xml
@@ -2,16 +2,12 @@
 <project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xmlns="http://maven.apache.org/POM/4.0.0"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <artifactId>mock-loggers-tinylog-provider</artifactId>
+  <artifactId>mock-loggers-elf4j</artifactId>
   <build>
     <plugins>
       <plugin>
         <artifactId>jacoco-maven-plugin</artifactId>
         <groupId>org.jacoco</groupId>
-      </plugin>
-      <plugin>
-        <artifactId>maven-surefire-plugin</artifactId>
-        <groupId>org.apache.maven.plugins</groupId>
       </plugin>
       <plugin>
         <artifactId>maven-failsafe-plugin</artifactId>
@@ -22,10 +18,14 @@
         <configuration>
           <archive>
             <manifestEntries>
-              <Automatic-Module-Name>mock.loggers.tinylog.provider</Automatic-Module-Name>
+              <Automatic-Module-Name>mock.loggers.elf4j</Automatic-Module-Name>
             </manifestEntries>
           </archive>
         </configuration>
+        <groupId>org.apache.maven.plugins</groupId>
+      </plugin>
+      <plugin>
+        <artifactId>maven-surefire-plugin</artifactId>
         <groupId>org.apache.maven.plugins</groupId>
       </plugin>
     </plugins>
@@ -36,13 +36,13 @@
       <groupId>org.jetbrains</groupId>
     </dependency>
     <dependency>
-      <artifactId>hamcrest</artifactId>
-      <groupId>org.hamcrest</groupId>
+      <artifactId>elf4j</artifactId>
+      <groupId>io.github.elf4j</groupId>
+      <version>${elf4j.version}</version>
     </dependency>
     <dependency>
-      <artifactId>junit-jupiter-api</artifactId>
-      <groupId>org.junit.jupiter</groupId>
-      <scope>provided</scope>
+      <artifactId>hamcrest</artifactId>
+      <groupId>org.hamcrest</groupId>
     </dependency>
     <dependency>
       <artifactId>junit-jupiter-engine</artifactId>
@@ -66,15 +66,10 @@
       <artifactId>mockito-junit-jupiter</artifactId>
       <groupId>org.mockito</groupId>
     </dependency>
-    <dependency>
-      <artifactId>tinylog-api</artifactId>
-      <groupId>org.tinylog</groupId>
-      <version>${tinylog.version}</version>
-    </dependency>
   </dependencies>
-  <description>Mock provider for tinylog backed by Mockito.</description>
+  <description>Mock loggers for Easy Logging Facade for Java backed by Mockito.</description>
   <modelVersion>4.0.0</modelVersion>
-  <name>Mock provider for tinylog</name>
+  <name>Mock loggers for elf4j</name>
   <parent>
     <artifactId>mock-loggers</artifactId>
     <groupId>io.github.vitalijr2.logging</groupId>
@@ -102,7 +97,7 @@
             <artifactId>maven-javadoc-plugin</artifactId>
             <configuration>
               <links>
-                <link>https://javadoc.io/doc/org.tinylog/tinylog-api/${tinylog.version}</link>
+                <link>https://javadoc.io/doc/io.github.elf4j/elf4j/${elf4j.version}</link>
               </links>
             </configuration>
             <groupId>org.apache.maven.plugins</groupId>
@@ -124,7 +119,7 @@
     </profile>
   </profiles>
   <properties>
-    <tinylog.version>2.7.0</tinylog.version>
+    <elf4j.version>4.1.0</elf4j.version>
   </properties>
   <version>1.2.0-SNAPSHOT</version>
 </project>
