Fix workflows' artifacts

--- a/.github/workflows/check-release.yml
+++ b/.github/workflows/check-release.yml
@@ -26,3 +26,16 @@ jobs:
         run: |
           ./mvnw --batch-mode -s .mvn/ci_settings.xml -ntp -DskipTests -DskipPublishing -Prun-its,release
           ./mvnw license:check-file-header -Dlicense.failOnMissingHeader=true -Pprepare-and-check
+      - name: Logs for integration tests
+        uses: actions/upload-artifact@v4
+        with:
+          name: 'it-logs'
+          compression-level: '6'
+          path: |
+            commons-logging/target/it/**/build.log
+            elf4j/target/it/**/build.log
+            jdk-platform-logging/target/it/**/build.log
+            slf4j/target/it/**/build.log
+            tinylog-provider/target/it/**/build.log
+            tinylog-writer/target/it/**/build.log
+          retention-days: 1
